[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/backest.png" type="Texture" id=1]
[ext_resource path="res://Characters/GOO.gd" type="Script" id=2]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec4 goo_color: hint_color;

float rand(vec2 coordinates) {
	return fract(sin(dot(coordinates, vec2(11.1111, 77.7777))) * 44444.44444444);
}

float noise(vec2 coordinates) {
	vec2 floored = floor(coordinates);
	vec2 fracted = fract(coordinates);
	
	float a = rand(floored);
	float b = rand(floored + vec2(1.0, 0.0));
	float c = rand(floored + vec2(0.0, 1.0));
	float d = rand(floored + vec2(1.0, 1.0));
	
	vec2 cubic = fracted * fracted * (3.0 - 2.0 * fracted);
	
	return mix(a,b,cubic.x) + (c-a)*cubic.y * (1.0 - cubic.x) + (d-b)*cubic.x * cubic.y;
}

void fragment(){
	
	vec2 noiseA = UV * 6.0;
	vec2 noiseB = UV * 6.0 + 5.0;
	
	vec2 motionA = vec2(TIME * 0.2, TIME * -0.3);
	vec2 motionB = vec2(TIME * 0.05, TIME * 0.25);
	
	vec2 distortionA = vec2(noise(noiseA + motionA), noise(noiseA + motionA)) - vec2(0.5);
	vec2 distortionB = vec2(noise(noiseB + motionB), noise(noiseB + motionB)) - vec2(0.5);
	
	vec2 distortion = (distortionA + distortionB) / 60.0;
	
	vec4 color = mix(textureLod(SCREEN_TEXTURE, SCREEN_UV + distortion, 0.0), goo_color, 0.4);
	color.rgb = mix(vec3(0.5), color.rgb, 1.4);
	
	float nearTop = 1.0 - clamp((UV.y + distortion.y) / 0.08, 0.0, 1.0);
	
	color = mix(color, vec4(1.0), nearTop);
	
	if(nearTop > 0.7){
		if(nearTop < 0.8){
			color.a = (0.8 - nearTop);
		} else {
			color.a = 0.0;
		}
	}
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 6 )
shader_param/goo_color = Color( 0.137255, 0.901961, 0.156863, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 380, 400 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 380.5, 42.5 )

[node name="GOO" type="Area2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="GooSprite" type="Sprite" parent="."]
material = SubResource( 3 )
scale = Vector2( 0.4, 1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -100 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 252 )
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_GOO_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GOO_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
